syntax = "proto3";
package fifsky.blog.admin.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";
import "admin/v1/common.proto";

option go_package = "gen/admin/v1";

service RemindService {
  rpc List(PageRequest) returns (RemindListResponse) {
    option (google.api.http) = {
      post: "/api/admin/remind/list"
      body: "*"
    };
  }
  rpc Create(RemindCreateRequest) returns (IDResponse) {
    option (google.api.http) = {
      post: "/api/admin/remind/create"
      body: "*"
    };
  }
  rpc Update(RemindUpdateRequest) returns (IDResponse) {
    option (google.api.http) = {
      post: "/api/admin/remind/update"
      body: "*"
    };
  }
  rpc Delete(IDRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/admin/remind/delete"
      body: "*"
    };
  }
}

message RemindItem {
  int32 id = 1;
  int32 type = 2;
  string content = 3;
  int32 month = 4;
  int32 week = 5;
  int32 day = 6;
  int32 hour = 7;
  int32 minute = 8;
  int32 status = 9;
  string next_time = 10;
  string created_at = 11;
}
message RemindListResponse {
  repeated RemindItem list = 1;
  int32 page_total = 2;
}

message RemindCreateRequest {
  int32 type = 1;
  string content = 2[(buf.validate.field).required = true, (google.api.field_behavior) = REQUIRED];
  int32 month = 3;
  int32 week = 4;
  int32 day = 5;
  int32 hour = 6;
  int32 minute = 7;
}

message RemindUpdateRequest {
  int32 id = 1[(buf.validate.field).int32.gt = 0, (google.api.field_behavior) = REQUIRED];
  int32 type = 2;
  string content = 3;
  int32 month = 4;
  int32 week = 5;
  int32 day = 6;
  int32 hour = 7;
  int32 minute = 8;
}
